--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Will u be my Valentine</h2>
+        <h2 class="question">Will u be my Valentine?</h2>
         <img class="gif" src="https://media.tenor.com/eb_1cgXn1KQAAAAi/cute-please.gif"/>
         <div class="bnt-group">
             <button class="yes-btn">YES</button>
